Changing db yaml so that prod config is now for postgresql

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: db/production.postgresql
   pool: 5
   timeout: 5000
