--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,24 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: db/development
   pool: 5
   timeout: 5000
+  port: 5432
+  username: postgres
+  password: disrupt11
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: db/test
   pool: 5
   timeout: 5000
+  port: 5432
+  username: postgres
+  password: disrupt11
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: db/production.postgresql
   pool: 5
   timeout: 5000
 
