--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,12 @@ test:
   username: postgres
   password: disrupt11
 
+staging:
+  adapter: postgresql
+  database: db/production.postgresql
+  pool: 5
+  timeout: 5000
+  
 production:
   adapter: postgresql
   database: db/production.postgresql
