--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   timeout: 5000
   port: 5432
   username: postgres
-  password: 168washu
+  password: disrupt11
 
 test:
   adapter: postgresql
@@ -14,7 +14,7 @@ test:
   timeout: 5000
   port: 5432
   username: postgres
-  password: 168washu
+  password: disrupt11
 
 staging:
   adapter: postgresql
