--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,5 @@ tmp/**/*
 webrat.log
 test_output.txt
 .project
-<<<<<<< HEAD
-.sass-cache
-=======
 .sass-cache/
->>>>>>> revolution
+Moonlite.tmproj
