--- a/lib/webstore/manifest.json
+++ b/lib/webstore/manifest.json
@@ -3,17 +3,16 @@
   "description": "Prove your skills. Be discovered.",
   "version": "0.0.0.1",
   "manifest_version": 2,
-  "default_locale": "en",
   "app": {
     "urls": [
       "*://metabright.com/",
       "*://www.metabright.com/"
     ],
     "launch": {
-      "web_url": "http://www.metabright.com/"
+      "web_url": "http://www.metabright.com/?ref=cw"
     }
   },
   "icons": {
-    "128": "https://s3.amazonaws.com/moonlite-nsdub/static/Stoney+128x128+with+16px+padding.png"
+    "128": "mb_128.png"
   }
 }
