manifest file changed

--- a/lib/webstore/manifest.json
+++ b/lib/webstore/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "MetaBright",
-  "description": "Prove your skills. Be discovered.",
+  "description": "MetaBright is the game that can land you your next job or internship.",
   "version": "0.0.0.1",
   "manifest_version": 2,
   "app": {
