--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,7 @@ development:
   pool: 5
   timeout: 5000
   port: 5432
+  host: localhost
   username: postgres
   password: 168washu
 
@@ -13,6 +14,7 @@ test:
   pool: 5
   timeout: 5000
   port: 5432
+  host: localhost
   username: postgres
   password: 168washu
 
